--- a/scss/style.scss
+++ b/scss/style.scss
@@ -892,3 +892,45 @@ img{
 		justify-content: center;
 	}
 }
+@media (max-width: 576px){
+	.main-container{
+		gap: 22px;
+		padding-inline: 20px;
+		padding-top: 20px;
+	}
+	.header{
+		padding-inline: 30px;
+	}
+	.item-header{
+		p{
+			font-size: 14px;
+		}
+	}
+	.menu-list-header ul {
+		gap: 12px;
+	}
+	.burger-menu{
+		gap: 12px;
+	}
+	.calculator{
+		gap: 24px;
+	}
+	.reviews-cards-wrapper{
+		max-width: 536px;
+	}
+	.arrow{
+		display: none;
+	}
+	.footer{
+		padding-inline: 30px;
+		padding-block: 20px;
+	}
+	.button-request{
+		padding-inline: 16px;
+		padding-block: 8px;
+		font-size: 14px;
+	}
+	.bottom-header.active {
+		gap: 12px;
+	}
+}
