--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,7 +48,6 @@
     font-style: normal;
     font-display: swap;
 }
-
 @font-face {
     font-family: 'Yantramanav';
     src: url('/fonts/Yantramanav-Bold.woff2') format('woff2');
@@ -67,9 +66,34 @@
 	--footer-height: 234px;
 	--border-size: 2px;
 	--border-radius: 4px;
+	--container-desktop: 1536px;
+	--container-laptop-lg: 1026px;
+	--container-laptop-md: 768px;
+	--container-laptop-sm: 640px;
+	--container-padding: 15px;
 }
+
 body{
 	font-family: Formular, Arial, sans-serif;
+	background-color: var(--color-main);
+	
+}
+.main{
+	gap: 72px;
+	display: flex;
+	flex-direction: column;
+	padding-top: 50px;
+	align-items: center;
+	width: 100%;
+}
+.container{
+	max-width: var(--container-desktop);
+	padding-inline: var(--container-padding);
+	// margin-inline: auto;
+}
+.footer-container{
+	max-width: var(--container-desktop);
+	padding-inline: var(--container-padding);
 }
 .header{
 	background-color: var(--color-header);
@@ -77,19 +101,20 @@ body{
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
-	padding-inline: 192px;
+	// padding-inline: 192px;
 	padding-block: 24px;
+	align-items: center;
 }
 .top-header{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	width: 100%;
 }
 .logo-header{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	
 }
 .logo-text{
 	font-weight: 900;
@@ -128,20 +153,21 @@ body{
 	flex-direction: column;
 	gap: 4px;
 }
-.info-phone{
+.info-phone, .footer-right-number{
 	font-weight: 900;
-	font-size: 36px;
-	line-height: 40px;
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
-.info-note{
-	font-size: 24px;
-	line-height: 32px;
+.info-note, .footer-right-text{
+	font-size: clamp(1.25rem, 0.6vw + 1rem, 1.5rem); 
+	line-height: clamp(1.75rem, 0.6vw + 1.25rem, 2rem);
 	font-weight: 300;
 }
 .bottom-header{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	width: 100%;
 }
 .list-header{
 	display: flex;
@@ -173,21 +199,11 @@ body{
 	border-bottom: 2px dashed var(--color-text);
 }
 
-.main{
-	background-color: var(--color-main);
-}
-.main-container{
-	gap: 72px;
-	max-width: 1536px;
-	display: flex;
-	flex-direction: column;
-	margin-inline: auto;
-	padding-top: 50px;
-}
 .calculator{
 	display: flex;
 	gap: 24px;
 	align-items: center;
+	width: 100%;
 }
 .calculator-delivery{
 	background-color: var(--color-header);
@@ -226,10 +242,7 @@ body{
 	max-width: 496px;
 }
 .grid-item{
-	// border-radius: 4px;
-	// border: 2px solid;
 	max-height: 46px;
-
 	input, textarea{
 		width: 100%;
 		padding: 12px;
@@ -258,12 +271,13 @@ img{
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	max-width: 756px;
 }
 .delivery-text{
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
-	max-width: 756px;
+	// max-width: 756px;
 }
 .delivery-title{
 	font-weight: 900;
@@ -459,6 +473,7 @@ img{
 	gap: 32px;
 	border-radius: 16px;
 	margin-bottom: 72px;
+	width: 100%;
 }
 .contact-title{
 	font-weight: 900;
@@ -538,15 +553,11 @@ img{
 	gap: 4px;
 	justify-content: center;
 }
-.footer-right-number{
-	font-size: 36px;
-	font-weight: 900;
-	line-height: 40px;
-}
-.footer-right-text{
-	font-size: 24px;
-	line-height: 32px;
-}
+// .footer-right-number{
+// 	font-size: 36px;
+// 	font-weight: 900;
+// 	line-height: 40px;
+// }
 .footer-down-left{
 	max-width: 1146px;
 }
@@ -578,20 +589,25 @@ img{
 	border: 0;
 }
 
-@media (max-width: 1536px){ч
+@media (max-width: 1536px){
 	.header{
-		padding-inline: 256px;
+		// padding-inline: 256px;
 	}
-	.info-phone{
-		font-size: 30px;
-		line-height: 36px;
+	.container{
+		max-width: var(--container-laptop-lg);
 	}
-	.info-note{
-		font-size: 20px;
-		line-height: 28px;
+	.footer-container{
+		max-width: var(--container-desktop);
 	}
-	.main-container{
-		max-width: 1026px;
+	.info-phone, .footer-right-number{
+		font-size: clamp(1.5rem, 1vw + 1rem, 1.875rem);
+		line-height: clamp(2.25rem, 2.5vw + 1rem, 2.5rem);
+	}
+	.info-note, .footer-right-text{
+		font-size: clamp(1rem, 1vw + 0.5rem, 1.25rem);
+		line-height: clamp(1.5rem, 1vw + 0.75rem, 1.75rem);
+	}
+	.main{
 		gap: 48px;
 	}
 	.calculator{
@@ -653,15 +669,16 @@ img{
 		margin-bottom: 48px;
 	}
 }
-
 @media (max-width: 1024px){
-	.main-container{
-		max-width: 768px;
-	}
 	.header{
-		padding-inline: 128px;
+		// padding-inline: 128px;
 		gap: 12px;
-		
+	}
+	.container{
+		max-width:var(--container-laptop-md);
+	}
+	.footer-container{
+		max-width: var(--container-laptop-md);
 	}
 	.top-header{
 		flex-direction: column;
@@ -674,13 +691,13 @@ img{
 		flex-direction: row;
 		align-items: center;
 	}
-	.info-phone{
-		font-size: 24px;
-		line-height: 32px;
+	.info-phone, .footer-right-number{
+		font-size: clamp(1.25rem, 1.5vw + 0.5rem, 1.5rem);
+		line-height: clamp(2rem, 2.5vw + 0.5rem, 2.25rem);
 	}
-	.info-note{
-		font-size: 16px;
-		line-height: 24px;
+	.info-note, .footer-right-text{
+		font-size: clamp(0.875rem, 1vw + 0.25rem, 1rem);
+		line-height: clamp(1.25rem, 1vw + 0.25rem, 1.5rem);
 	}
 	.info-left{
 		display: flex;
@@ -736,7 +753,6 @@ img{
 			left: 85%;
 		}
 	}
-
 	.footer{
 		padding-inline: 128px;
 	}
@@ -759,14 +775,6 @@ img{
 	.footer-left{
 		grid-area: bottom-left;
 	}
-	.footer-right-number{
-		font-size: 30px;
-		line-height: 36px;
-	}
-	.footer-right-text{
-		font-size: 20px;
-		line-height: 28px;
-	}
 	.footer-down{
 		flex-direction: column;
 		gap: 8px;
@@ -781,12 +789,18 @@ img{
 }
 @media (max-width: 758px){
 	.header{
-		padding-inline: 60px;
+		// padding-inline: 60px;
 		padding-block: 8px;
 		gap: 0;
 		min-height: 90px;
 		border-bottom-left-radius: 16px;
 		border-bottom-right-radius: 16px;
+	}
+	.container{
+		max-width:var(--container-laptop-sm);
+	}
+	.footer-container{
+		max-width: var(--container-laptop-sm);
 	}
 	.logo-header{
 		margin-bottom: 12px;
@@ -800,9 +814,9 @@ img{
 		font-size: 18px;
 		line-height: 28px;
 	}
-	.info-phone{
-		font-size: 20px;
-		line-height: 28px;
+	.info-phone, .footer-right-number{
+		font-size: clamp(1rem, 2vw + 0.25rem, 1.25rem);
+		line-height: clamp(1.75rem, 2.5vw + 0.25rem, 2rem);
 	}
 	.burger {
 		display: flex;
@@ -855,9 +869,6 @@ img{
 		align-items: center;
 		gap: 24px;
 	}
-	.main-container{
-		max-width: 640px;
-	}
 	.delivery-title{
 		font-size: 30px;
 		line-height: 36px;
@@ -893,13 +904,15 @@ img{
 	}
 }
 @media (max-width: 576px){
-	.main-container{
+	.main{
 		gap: 22px;
-		padding-inline: 20px;
-		padding-top: 20px;
 	}
 	.header{
-		padding-inline: 30px;
+		// padding-inline: 30px;
+	}
+	.info-phone, .footer-right-number{
+		font-size: clamp(0.875rem, 2vw, 1rem);;
+		line-height: 1.75rem;
 	}
 	.item-header{
 		p{
