--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ body {
   gap: 72px;
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 72px;
   align-items: center;
   width: 100%;
 }
@@ -467,6 +467,7 @@ body {
   border-radius: 6px;
   user-select: none;
   resize: none;
+  max-height: inherit;
 }
 
 img {
@@ -517,6 +518,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  width: 100%;
 }
 
 .advantages-title {
@@ -635,6 +637,7 @@ img {
   padding-inline: 23px;
   flex-direction: row;
   margin-inline: auto;
+  max-width: 100vw;
 }
 
 .arrow {
@@ -712,15 +715,18 @@ img {
   padding: 0;
 }
 
+.contact {
+  width: 100%;
+  margin-bottom: 72px;
+}
+
 .contact-form {
   display: flex;
   flex-direction: column;
-  padding: 64px;
   background-color: var(--color-header);
   gap: 32px;
   border-radius: 16px;
-  margin-bottom: 72px;
-  width: 100%;
+  padding: 64px;
 }
 
 .contact-title {
@@ -853,6 +859,7 @@ img {
 @media (max-width: 1536px) {
   .container {
     max-width: var(--container-laptop-lg);
+    padding-inline: var(--container-padding);
   }
   .footer-container {
     max-width: var(--container-desktop);
@@ -866,6 +873,7 @@ img {
     line-height: clamp(1.5rem, 1vw + 0.75rem, 1.75rem);
   }
   .main {
+    padding-top: 48px;
     gap: 48px;
   }
   .calculator {
@@ -922,7 +930,7 @@ img {
     top: -55px;
     left: 79%;
   }
-  .contact-form {
+  .contact {
     margin-bottom: 48px;
   }
 }
@@ -932,6 +940,7 @@ img {
   }
   .container {
     max-width: var(--container-laptop-md);
+    padding-inline: var(--container-padding);
   }
   .footer-container {
     max-width: var(--container-laptop-md);
@@ -1048,6 +1057,7 @@ img {
   }
   .container {
     max-width: var(--container-laptop-sm);
+    padding-inline: var(--container-padding);
   }
   .footer-container {
     max-width: var(--container-laptop-sm);
@@ -1150,6 +1160,9 @@ img {
   .main {
     gap: 22px;
   }
+  .container {
+    padding-inline: 10px;
+  }
   .info-phone, .footer-right-number {
     font-size: clamp(0.875rem, 2vw, 1rem);
     line-height: 1.75rem;
@@ -1166,11 +1179,50 @@ img {
   .calculator {
     gap: 24px;
   }
+  .calculator-button {
+    margin-top: 10px;
+  }
+  .calculator-delivery {
+    gap: 14px;
+  }
+  .calculator-grid {
+    gap: 8px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .reviews-form {
+    max-width: 100vw;
+  }
   .reviews-cards-wrapper {
-    max-width: 536px;
+    max-width: 100vw;
+  }
+  .reviews-item {
+    gap: 16px;
+    padding: 8px;
+    max-width: 100vw;
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+  }
+  .reviews-text {
+    max-width: 100vw;
+  }
+  .reviews-cards {
+    flex-wrap: nowrap;
+    max-width: 100vw;
+    box-sizing: border-box;
   }
   .arrow {
     display: none;
+  }
+  .contact-form {
+    padding-block: 16px;
+    gap: 16px;
+    max-width: 100vw;
+  }
+  .contact-grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    margin-inline: 0;
+    gap: 12px;
   }
   .footer {
     padding-inline: 30px;
@@ -1183,5 +1235,18 @@ img {
   }
   .bottom-header.active {
     gap: 12px;
+  }
+  .big {
+    grid-row: span 2;
+  }
+  .big textarea {
+    min-height: auto;
+    max-height: 100px;
+  }
+  .full {
+    grid-column: span 1;
+  }
+  .grid-item {
+    padding: 6px;
   }
 }/*# sourceMappingURL=style.css.map */
