--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,7 +55,9 @@
     font-style: normal;
     font-display: swap;
 }
-
+// *{
+// 	outline: 1px solid red;
+// }
 :root {
 	--color-button: #8B5CF6;
 	--color-header: #F9FAFB;
@@ -82,7 +84,7 @@ body{
 	gap: 72px;
 	display: flex;
 	flex-direction: column;
-	padding-top: 50px;
+	padding-top: 72px;
 	align-items: center;
 	width: 100%;
 }
@@ -250,6 +252,7 @@ body{
 		border-radius: 6px;
 		user-select: none;
 		resize: none;
+		max-height: inherit;
 	}
 }
 img{
@@ -294,6 +297,7 @@ img{
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
+	width: 100%;
 }
 .advantages-title{
 	font-weight: 900;
@@ -395,6 +399,7 @@ img{
 	padding-inline: 23px;
 	flex-direction: row;
 	margin-inline: auto;
+	max-width: 100vw;
 }
 .arrow{
 	background: none;
@@ -465,15 +470,18 @@ img{
 		padding: 0;
 	}
 }
+.contact{
+	width: 100%;
+	margin-bottom: 72px;
+}
 .contact-form{
 	display: flex;
 	flex-direction: column;
-	padding: 64px;
 	background-color: var(--color-header);
 	gap: 32px;
 	border-radius: 16px;
-	margin-bottom: 72px;
-	width: 100%;
+	padding: 64px;
+	// width: 100%;
 }
 .contact-title{
 	font-weight: 900;
@@ -595,6 +603,7 @@ img{
 	}
 	.container{
 		max-width: var(--container-laptop-lg);
+		padding-inline: var(--container-padding);
 	}
 	.footer-container{
 		max-width: var(--container-desktop);
@@ -608,6 +617,7 @@ img{
 		line-height: clamp(1.5rem, 1vw + 0.75rem, 1.75rem);
 	}
 	.main{
+		padding-top: 48px;
 		gap: 48px;
 	}
 	.calculator{
@@ -665,7 +675,7 @@ img{
 			left: 79%;
 		}
 	}
-	.contact-form{
+	.contact{
 		margin-bottom: 48px;
 	}
 }
@@ -676,6 +686,7 @@ img{
 	}
 	.container{
 		max-width:var(--container-laptop-md);
+		padding-inline: var(--container-padding);
 	}
 	.footer-container{
 		max-width: var(--container-laptop-md);
@@ -798,6 +809,7 @@ img{
 	}
 	.container{
 		max-width:var(--container-laptop-sm);
+		padding-inline: var(--container-padding);
 	}
 	.footer-container{
 		max-width: var(--container-laptop-sm);
@@ -907,8 +919,8 @@ img{
 	.main{
 		gap: 22px;
 	}
-	.header{
-		// padding-inline: 30px;
+	.container{
+		padding-inline: 10px;
 	}
 	.info-phone, .footer-right-number{
 		font-size: clamp(0.875rem, 2vw, 1rem);;
@@ -928,11 +940,52 @@ img{
 	.calculator{
 		gap: 24px;
 	}
+	.calculator-button{
+		margin-top: 10px;
+	}
+	.calculator-delivery{
+		gap: 14px;
+	}
+	.calculator-grid{
+		gap: 8px;
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.reviews-form{
+		max-width: 100vw;
+	}
 	.reviews-cards-wrapper{
-		max-width: 536px;
+		max-width: 100vw;
+	}
+	.reviews-item{
+		gap: 16px;
+		padding: 8px;
+		max-width: 100vw;
+		flex: 0 0 auto;
+		scroll-snap-align: start;
+	}
+	.reviews-text{
+		max-width: 100vw;
+	}
+	.reviews-cards {
+		// overflow-x: auto;
+		flex-wrap: nowrap;
+		max-width: 100vw;
+		box-sizing: border-box;
+		// scroll-snap-type: x mandatory;
 	}
 	.arrow{
 		display: none;
+	}
+	.contact-form{
+		padding-block: 16px;
+		gap: 16px;
+		max-width: 100vw;
+	}
+	.contact-grid{
+		grid-template-columns: repeat(1, 1fr);
+		grid-template-rows: repeat(7, 1fr);
+		margin-inline: 0;
+		gap: 12px;
 	}
 	.footer{
 		padding-inline: 30px;
@@ -945,5 +998,18 @@ img{
 	}
 	.bottom-header.active {
 		gap: 12px;
+	}
+	.big{
+		grid-row: span 2;
+		textarea{
+			min-height: auto;
+			max-height: 100px;
+		}
+	}
+	.full{
+		grid-column: span 1;
+	}
+	.grid-item{
+		padding: 6px;
 	}
 }
