--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,62 @@ body {
   padding-inline: var(--container-padding);
 }
 
+.button {
+  transition: background-color 0.2s ease-in-out;
+}
+.button:hover {
+  background-color: #6D28D9;
+}
+
+.lightbox, .request-form {
+  position: fixed;
+  inset: 0;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+.lightbox img, .request-form img {
+  max-width: 40vw;
+  max-height: 40vw;
+  object-fit: cover;
+  cursor: zoom-out;
+}
+
+.show {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.request-container {
+  background-color: var(--color-header);
+  padding: 26px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 20vw;
+  margin-inline: auto;
+  width: 100%;
+  border-radius: 8px;
+}
+
+.request-form-title {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.request-form-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 16px;
+}
+
 .header {
   background-color: var(--color-header);
   min-height: var(--header-height);
@@ -609,6 +665,7 @@ img {
 .guarantees-img {
   max-height: 375px;
   object-fit: contain;
+  cursor: pointer;
 }
 
 .guarantees-item-description {
