--- a/css/style.css
+++ b/css/style.css
@@ -201,56 +201,56 @@ svg * {
 }
 @font-face {
   font-family: "Heebo";
-  src: url("/fonts/Heebo-Light.woff2") format("woff2");
+  src: url("fonts/Heebo-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Heebo";
-  src: url("/fonts/Heebo-Bold.woff2") format("woff2");
+  src: url("fonts/Heebo-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/fonts/Formular-Bold.woff2") format("woff2");
+  src: url("fonts/Formular-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/fonts/Formular-Black.woff2") format("woff2");
+  src: url("fonts/Formular-Black.woff2") format("woff2");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/fonts/Formular.woff2") format("woff2");
+  src: url("fonts/Formular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/fonts/Formular-Medium.woff2") format("woff2");
+  src: url("fonts/Formular-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/fonts/Formular-Light.woff2") format("woff2");
+  src: url("fonts/Formular-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Yantramanav";
-  src: url("/fonts/Yantramanav-Bold.woff2") format("woff2");
+  src: url("fonts/Yantramanav-Bold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
