--- a/scss/style.scss
+++ b/scss/style.scss
@@ -512,7 +512,7 @@ img{
 	color: #6B7280;
 	position: relative;
 	&::after{
-		content: url(/icons/Quotes.svg);
+		content: url(icons/Quotes.svg);
 		position: absolute;
 		top: -55px;
 		left: 89%;
