--- a/css/style.css
+++ b/css/style.css
@@ -215,35 +215,35 @@ svg * {
 }
 @font-face {
   font-family: "Formular";
-  src: url("/FirstLendingPage/fonts/Formular-Bold.woff2") format("woff2");
+  src: url("/fonts/Formular-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/FirstLendingPage/fonts/Formular-Black.woff2") format("woff2");
+  src: url("/fonts/Formular-Black.woff2") format("woff2");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/FirstLendingPage/fonts/Formular.woff2") format("woff2");
+  src: url("/fonts/Formular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/FirstLendingPage/fonts/Formular-Medium.woff2") format("woff2");
+  src: url("/fonts/Formular-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Formular";
-  src: url("/FirstLendingPage/fonts/Formular-Light.woff2") format("woff2");
+  src: url("/fonts/Formular-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -763,7 +763,7 @@ img {
   position: relative;
 }
 .reviews-name::after {
-  content: url(/FirstLendingPage/icons/Quotes.svg);
+  content: url(/icons/Quotes.svg);
   position: absolute;
   top: -55px;
   left: 89%;
@@ -1215,10 +1215,16 @@ img {
 }
 @media (max-width: 576px) {
   .main {
-    gap: 22px;
+    gap: 26px;
   }
   .container {
     padding-inline: 10px;
+  }
+  .logo-text {
+    max-width: 140px;
+  }
+  .info-left p {
+    font-size: 10px;
   }
   .info-phone, .footer-right-number {
     font-size: clamp(0.875rem, 2vw, 1rem);
@@ -1228,10 +1234,13 @@ img {
     font-size: 14px;
   }
   .menu-list-header ul {
-    gap: 12px;
+    gap: 10px;
+    font-size: 12px;
   }
   .burger-menu {
     gap: 12px;
+    width: 100%;
+    justify-content: space-around;
   }
   .calculator {
     gap: 24px;
@@ -1246,6 +1255,22 @@ img {
     gap: 8px;
     grid-template-columns: repeat(1, 1fr);
   }
+  .guarantees {
+    gap: 20px;
+  }
+  .advantages {
+    max-width: 100vw;
+    gap: 16px;
+  }
+  .advantages-grid {
+    max-width: 100vw;
+  }
+  .advantages-item-text {
+    max-width: 80vw;
+  }
+  .advantages-icon {
+    max-width: 20vw;
+  }
   .reviews-form {
     max-width: 100vw;
   }
@@ -1253,7 +1278,7 @@ img {
     max-width: 100vw;
   }
   .reviews-item {
-    gap: 16px;
+    gap: 6px;
     padding: 8px;
     max-width: 100vw;
     flex: 0 0 auto;
@@ -1266,12 +1291,14 @@ img {
     flex-wrap: nowrap;
     max-width: 100vw;
     box-sizing: border-box;
+    gap: 16px;
   }
   .arrow {
     display: none;
   }
   .contact-form {
     padding-block: 16px;
+    padding-inline: 26px;
     gap: 16px;
     max-width: 100vw;
   }
@@ -1286,12 +1313,12 @@ img {
     padding-block: 20px;
   }
   .button-request {
-    padding-inline: 16px;
+    padding-inline: 4px;
     padding-block: 8px;
-    font-size: 14px;
+    font-size: 10px;
   }
   .bottom-header.active {
-    gap: 12px;
+    gap: 8px;
   }
   .big {
     grid-row: span 2;
