--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,35 +15,35 @@
 }
 @font-face {
     font-family: 'Formular';
-    src: url('/FirstLendingPage/fonts/Formular-Bold.woff2') format('woff2');
+    src: url('/fonts/Formular-Bold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Formular';
-    src: url('/FirstLendingPage/fonts/Formular-Black.woff2') format('woff2');
+    src: url('/fonts/Formular-Black.woff2') format('woff2');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Formular';
-    src: url('/FirstLendingPage/fonts/Formular.woff2') format('woff2');
+    src: url('/fonts/Formular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Formular';
-    src: url('/FirstLendingPage/fonts/Formular-Medium.woff2') format('woff2');
+    src: url('/fonts/Formular-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Formular';
-    src: url('/FirstLendingPage/fonts/Formular-Light.woff2') format('woff2');
+    src: url('/fonts/Formular-Light.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -512,7 +512,7 @@ img{
 	color: #6B7280;
 	position: relative;
 	&::after{
-		content: url(/FirstLendingPage/icons/Quotes.svg);
+		content: url(/icons/Quotes.svg);
 		position: absolute;
 		top: -55px;
 		left: 89%;
@@ -969,10 +969,18 @@ img{
 }
 @media (max-width: 576px){
 	.main{
-		gap: 22px;
+		gap: 26px;
 	}
 	.container{
 		padding-inline: 10px;
+	}
+	.logo-text{
+		max-width: 140px;
+	}
+	.info-left{
+		p{
+			font-size: 10px;
+		}
 	}
 	.info-phone, .footer-right-number{
 		font-size: clamp(0.875rem, 2vw, 1rem);;
@@ -984,10 +992,13 @@ img{
 		}
 	}
 	.menu-list-header ul {
-		gap: 12px;
+		gap: 10px;
+		font-size: 12px;
 	}
 	.burger-menu{
 		gap: 12px;
+		width: 100%;
+		justify-content: space-around;
 	}
 	.calculator{
 		gap: 24px;
@@ -1002,6 +1013,22 @@ img{
 		gap: 8px;
 		grid-template-columns: repeat(1, 1fr);
 	}
+	.guarantees{
+		gap: 20px;
+	}
+	.advantages{
+		max-width: 100vw;
+		gap: 16px;
+	}
+	.advantages-grid{
+		max-width: 100vw;
+	}
+	.advantages-item-text{
+		max-width: 80vw;
+	}
+	.advantages-icon{
+		max-width: 20vw;
+	}
 	.reviews-form{
 		max-width: 100vw;
 	}
@@ -1009,7 +1036,7 @@ img{
 		max-width: 100vw;
 	}
 	.reviews-item{
-		gap: 16px;
+		gap: 6px;
 		padding: 8px;
 		max-width: 100vw;
 		flex: 0 0 auto;
@@ -1023,6 +1050,7 @@ img{
 		flex-wrap: nowrap;
 		max-width: 100vw;
 		box-sizing: border-box;
+		gap: 16px;
 		// scroll-snap-type: x mandatory;
 	}
 	.arrow{
@@ -1030,6 +1058,7 @@ img{
 	}
 	.contact-form{
 		padding-block: 16px;
+		padding-inline: 26px;
 		gap: 16px;
 		max-width: 100vw;
 	}
@@ -1044,12 +1073,12 @@ img{
 		padding-block: 20px;
 	}
 	.button-request{
-		padding-inline: 16px;
+		padding-inline: 4px;
 		padding-block: 8px;
-		font-size: 14px;
+		font-size: 10px;
 	}
 	.bottom-header.active {
-		gap: 12px;
+		gap: 8px;
 	}
 	.big{
 		grid-row: span 2;
