--- a/css/style.css
+++ b/css/style.css
@@ -998,6 +998,9 @@ img {
   .contact {
     margin-bottom: 48px;
   }
+  .request-container {
+    max-width: 30vw;
+  }
 }
 @media (max-width: 1024px) {
   .header {
@@ -1111,6 +1114,9 @@ img {
   .footer-down-right {
     max-width: 768px;
   }
+  .request-container {
+    max-width: 35vw;
+  }
 }
 @media (max-width: 758px) {
   .header {
@@ -1220,6 +1226,9 @@ img {
   .footer-left-logo {
     justify-content: center;
   }
+  .request-container {
+    max-width: 40vw;
+  }
 }
 @media (max-width: 576px) {
   .main {
@@ -1270,17 +1279,12 @@ img {
     max-width: 100vw;
     gap: 16px;
   }
-  .advantages-grid {
-    max-width: 100vw;
+  .advantages-item img {
+    max-width: 100%;
+    height: auto;
   }
   .advantages-item-text {
-    max-width: 80vw;
-  }
-  .advantages-icon {
-    max-width: 20vw;
-  }
-  .reviews-form {
-    max-width: 100vw;
+    max-width: 100%;
   }
   .reviews-cards-wrapper {
     max-width: 100vw;
@@ -1340,5 +1344,15 @@ img {
   }
   .grid-item {
     padding: 6px;
+  }
+  .footer-right-number p, .footer-right-text p {
+    text-align: center;
+  }
+  .request-container {
+    max-width: 60vw;
+    padding: 16px;
+  }
+  .list-footer {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=style.css.map */
