--- a/scss/style.scss
+++ b/scss/style.scss
@@ -222,6 +222,7 @@ body{
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
+	
 }
 .list-header{
 	display: flex;
@@ -735,6 +736,9 @@ img{
 	.contact{
 		margin-bottom: 48px;
 	}
+	.request-container{
+		max-width: 30vw;
+	}
 }
 @media (max-width: 1024px){
 	.header{
@@ -853,7 +857,9 @@ img{
 	.footer-down-right{
 		max-width: 768px;
 	}
-	
+	.request-container{
+		max-width: 35vw;
+	}
 }
 @media (max-width: 758px){
 	.header{
@@ -971,6 +977,9 @@ img{
 	.footer-left-logo{
 		justify-content: center;
 	}
+	.request-container{
+		max-width: 40vw;
+	}
 }
 @media (max-width: 576px){
 	.main{
@@ -1026,17 +1035,24 @@ img{
 		gap: 16px;
 	}
 	.advantages-grid{
-		max-width: 100vw;
+		// max-width: 100vw;
+		// margin-inline: auto;
+	}
+	.advantages-item{
+		img{
+			max-width: 100%;
+			height: auto;
+		}
 	}
 	.advantages-item-text{
-		max-width: 80vw;
+		max-width: 100%;
 	}
 	.advantages-icon{
-		max-width: 20vw;
+		// max-width: 20vw;
 	}
-	.reviews-form{
-		max-width: 100vw;
-	}
+	// .reviews-form{
+	// 	max-width: 100vw;
+	// }
 	.reviews-cards-wrapper{
 		max-width: 100vw;
 	}
@@ -1098,4 +1114,17 @@ img{
 	.grid-item{
 		padding: 6px;
 	}
+	.footer-right-number, .footer-right-text{
+		p{
+			text-align: center;
+		}
+	}
+	.request-container{
+		max-width: 60vw;
+		padding: 16px;
+	}
+	.list-footer{
+		flex-direction: column;
+	}
+	
 }
