--- a/scss/style.scss
+++ b/scss/style.scss
@@ -455,8 +455,8 @@ img{
 	gap: 47px;
 	padding-inline: 23px;
 	flex-direction: row;
-	margin-inline: auto;
-	max-width: 100vw;
+	// margin-inline: auto;
+	// max-width: 100vw;
 }
 .arrow{
 	background: none;
@@ -478,15 +478,19 @@ img{
 	margin-inline: auto;
 }
 .reviews-cards-wrapper{
-	overflow: hidden;
-	width: 100%;
-	margin-inline: auto;
+	overflow-x: auto;
+	max-width: 100%;
+	// margin-inline: auto;
 	max-width: 1276px;
+	scroll-snap-type: x mandatory;
+	-webkit-overflow-scrolling: touch;
 }
 .reviews-cards{
 	display: flex;
+	flex-wrap: nowrap;
 	gap: 24px;
 	transition: translate 0.5s ease-in-out;
+	// width: 100%;
 	// justify-content: center;
 }
 .reviews-item{
@@ -1050,26 +1054,27 @@ img{
 	.advantages-icon{
 		// max-width: 20vw;
 	}
-	// .reviews-form{
-	// 	max-width: 100vw;
-	// }
-	.reviews-cards-wrapper{
+	.reviews-form{
 		max-width: 100vw;
+		padding-inline: 10px;
+	}
+	.reviews-cards-wrapper{
+		max-width: 100%;
 	}
 	.reviews-item{
 		gap: 6px;
 		padding: 8px;
-		max-width: 100vw;
+		max-width: 100%;
 		flex: 0 0 auto;
 		scroll-snap-align: start;
 	}
 	.reviews-text{
-		max-width: 100vw;
+		max-width: 100%;
 	}
 	.reviews-cards {
 		// overflow-x: auto;
 		flex-wrap: nowrap;
-		max-width: 100vw;
+		max-width: 100%;
 		box-sizing: border-box;
 		gap: 16px;
 		// scroll-snap-type: x mandatory;
