--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1147,3 +1147,12 @@ img{
 		gap: 8px;
 	}
 }
+@media (max-width: 400px){
+	.logo-text{
+		max-width: 120px;
+	}
+	.logo-img{
+		max-width: 40px;
+		height: auto;
+	}
+}
