--- a/scss/style.scss
+++ b/scss/style.scss
@@ -183,6 +183,8 @@ body{
 .logo{
 	display: flex;
 	align-items: center;
+	text-decoration: none;
+	color: #000;
 }
 .info-left{
 	text-align: right;
@@ -604,6 +606,8 @@ img{
 	display: flex;
 	gap: 4px;
 	align-items: center;
+	color: #fff;
+	text-decoration: none;
 	p{
 		font-size: 24px;
 		line-height: 32px;
